# multideck-ai-agents-manager

./: .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  RELEASING.md  install.bat  install.ps1  magent.config.example.json  multideck-retile.bat  multideck.bat  multideck.config.example.json  multideck.ps1  package-lock.json  pyproject.toml  uninstall.bat  uninstall.ps1
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-terminals/: action.yml
.github/actions/setup-ssh-server/: action.yml
.github/actions/setup-virtual-displays/: action.yml
.github/workflows/: ci.yml  dependency-audit.yml  release.yml  soak.yml  spike-monitor-lab.yml
.husky/: pre-commit  pre-push
docs/media/: README.md
docs/superpowers/plans/: 2026-06-17-ssh-remote-support.md  2026-06-23-python-rewrite-multi-window.md
docs/superpowers/specs/: 2026-06-17-ssh-remote-support-design.md  2026-06-23-node-rewrite-multi-window-design.md
scripts/: check.py  lint_rules.py  multideck.lib.ps1  multideck.ps1  vulture_whitelist.py
spike/: monitor_lab_probe.py
src/magent/: __main__.py  agent_state.py  attention.py  config.py  discover.py  env.py  grid.py  hotkey.py  icons.py  init_config.py  launch.py  lockfile.py  log.py  paths.py  procs.py  psmux.py  sentry.py  tailnet.py  tiling.py  titles.py  upload_server.py
src/magent/cli/: __init__.py  app.py  attach.py  attention_cmd.py  background.py  config_editor.py  config_io.py  docs.py  doctor.py  menu.py  mobile.py  session_picker.py  status.py  ui.py  watch.py
src/magent/platform/: __init__.py  linux.py  macos.py  windows.py
src/magent/sessions/: __init__.py
src/multideck/: __main__.py  agent_state.py  attention.py  cli.py  config.py  discover.py  env.py  feedback.py  grid.py  hotkey.py  icons.py  init_config.py  launch.py  lockfile.py  log.py  paths.py  procs.py  psmux.py  sentry.py  style.py  tailnet.py  terminals.py  tiling.py  titles.py  upload_server.py
src/multideck/cli/: __init__.py  app.py  attach.py  attention_cmd.py  background.py  config_editor.py  config_io.py  daemons.py  docs.py  doctor.py  menu.py  mobile.py  session_picker.py  spawns.py  status.py  ui.py  watch.py
src/multideck/platform/: __init__.py  linux.py  macos.py  windows.py
src/multideck/sessions/: __init__.py  claude.py  codex.py
tests/: Test-MdBuilders.ps1  conftest.py
tests/e2e/: _pty.py  test_cli_flags.py  test_daemon_lifecycle.py  test_happy.py  test_idempotency.py  test_launch.py  test_multi_window.py  test_pty_menu.py  test_real_attention.py  test_real_upload.py  test_soak.py  test_ssh.py  test_ssh_real.py  test_state_sink_contract.py  test_tailnet_real.py  test_up.py  test_upload_browser.py  test_vscode_tool.py
tests/helpers/: poll.py  ssh_server.py  virtual_display.py
tests/platform/: conftest.py  doctor_replay.py  lab_harness.py  monitor_lab.py  test_doctor_replay.py  test_monitor_lab_tiling.py  test_monitors.py  test_real_attention.py  test_real_hotkey.py  test_real_launch.py  test_real_launch_posix.py  test_real_launch_resume.py  test_real_psmux.py  test_real_terminal_fallbacks.py  test_terminals.py  test_windows.py  test_wt_cold_start.py
tests/platform/fixtures/doctor_reports/: _goldens.json  laptop_plus_external_left.json  solo_4k_175.json  workstation_triple.json
tests/platform/fixtures/topologies/: dual_mixed_dpi.json  solo_4k.json  triple_720p.json
tests/unit/: test_agent_state.py  test_attach.py  test_attention.py  test_attention_cmd.py  test_background.py  test_cli_smoke.py  test_cli_structure.py  test_commands.py  test_config.py  test_config_factory.py  test_daemons.py  test_discover.py  test_discover_merge.py  test_doctor.py  test_doctor_replay_offline.py  test_env_isolation.py  test_env_schema.py  test_feedback.py  test_grid.py  test_happy.py  test_hotkey.py  test_icons.py  test_launch.py  test_lint_rules.py  test_lockfile.py  test_log.py  test_mobile.py  test_monitor_lab_topologies.py  test_paths.py  test_platform_contract.py  test_procs.py  test_psmux.py  test_quality_gate.py  test_repo_hygiene.py  test_sentry.py  test_sessions.py  test_spawns.py  test_status.py  test_stdout_doctrine.py  test_tailnet.py  (+5 more)
