[project]
name = "multideck"
version = "1.0.0"
description = "Open every project in its own terminal and auto-tile across all monitors"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pexpect>=4.8", "ruff>=0.14", "mypy>=1.13", "pytest-cov>=5.0"]

[project.scripts]
multideck = "multideck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multideck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "platform: platform integration tests (require virtual displays)",
    "e2e: end-to-end tests (full pipeline)",
    "needs_ssh: e2e tests that require a live SSH server (skipped locally by the ssh_available fixture)",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
# Ruff's default rule set, pinned explicitly (pycodestyle errors E4/E7/E9 + pyflakes F).
# Matches the audited baseline; immune to upstream default drift.
# Future ratchets (deliberate, not now): E501, I, UP, B.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
files = ["src"]
python_version = "3.13"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true
