[project]
name = "multideck"
version = "1.0.0"
description = "Open every project in its own terminal and auto-tile across all monitors"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pexpect>=4.8", "ruff>=0.15", "mypy>=2.1", "pytest-cov>=5.0"]

[project.scripts]
multideck = "multideck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multideck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "platform: platform integration tests (require virtual displays)",
    "e2e: end-to-end tests (full pipeline)",
    "needs_ssh: e2e tests that require a live SSH server (skipped locally by the ssh_available fixture)",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
# Curated, expanded ruleset — each group earns its place (rationale in DESIGN.md).
# The frozen audited baseline (E4/E7/E9/F) stays first; everything after is the
# pre-refactor hardening pack. Any change to this list needs a written reason in
# DESIGN.md, per house rule.
select = [
  "E4", "E7", "E9", "F",          # frozen audited baseline (pycodestyle errors + pyflakes)
  "W", "I", "UP", "B", "A",       # hygiene: warnings, import order, py310+ idioms, bugbear, builtin shadowing
  "C4", "SIM", "RET", "RSE",      # simplification & return/raise discipline
  "ISC", "PIE",
  "C90",                          # mccabe ceiling (max-complexity below; ratchet DOWN only)
  "PLE", "PLW",
  "PLR0912", "PLR0915",           # branch/statement ceilings (same ratchet policy as C90)
  # ---- loudness pack: nothing fails silently (see DESIGN.md / audit §9) ----
  "T20",                          # no print() — invisible to logging AND Sentry
  "BLE",                          # no blind `except Exception` without re-raise
  "S110", "S112",                 # no try/except/pass, no try/except/continue
  "TRY",                          # tryceratops: typed raises, no error-swallowing shapes
  "LOG", "G",                     # logging correctness (G201: error(exc_info=True) -> .exception())
  "DTZ",                          # no naive datetimes
  # ---- drift & debt ----
  "ERA",                          # no commented-out code (pairs with vulture)
  "TC",                           # type-only imports into TYPE_CHECKING (serves the startup-cost policy)
  "TID",                          # flake8-tidy-imports — banned-api table added in Phase 2 (audit §4.3)
  "RUF",                          # ruff-native; RUF100 = unused-noqa (the noqa-rot guard)
  # ANN401 (no Any in annotations) is activated in Phase 3, together with the
  # ty + mypy-strict Any purge, so Any elimination happens once under a validating
  # type checker (audit §3 / §6.2). The final ruleset is identical either way.
]
ignore = [
  "TRY003",  # long-message-outside-exception-class: noise, no loudness value here
]

[tool.ruff.lint.mccabe]
# Phase-0 measured max (config_editor's menu monster). Ratchet DOWN only, never up.
max-complexity = 37

[tool.ruff.lint.pylint]
# Phase-0 measured maxima (same monster). Ratchet DOWN only, never up.
max-branches = 40
max-statements = 194

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]  # check.py & tooling print by design
"tests/**" = [
  "PLR0915",  # sprawling test funcs are readable enough; no ceiling for tests
  "S110",     # tests may assert-swallow in teardown/polling helpers
  "PLW1510",  # harness subprocess.run asserts on observable outcomes (stdout/files/.returncode), not an implicit check=
]

[tool.mypy]
files = ["src"]
python_version = "3.13"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true
