[project]
name = "multideck"
version = "1.0.0"
description = "Open every project in its own terminal and auto-tile across all monitors"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "pydantic-settings>=2.14"]

[project.optional-dependencies]
sentry = ["sentry-sdk>=2"]
toast = ["winotify>=1.1.0"]
dev = ["pytest>=7.0", "pexpect>=4.8", "ruff>=0.15", "pytest-cov>=5.0", "ty==0.0.56", "vulture>=2.14"]

[project.scripts]
multideck = "multideck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multideck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "platform: platform integration tests (require virtual displays)",
    "e2e: end-to-end tests (full pipeline)",
    "needs_ssh: e2e tests that require a live SSH server (skipped locally by the ssh_available fixture)",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
# Curated, expanded ruleset — each group earns its place (rationale in DESIGN.md).
# The frozen audited baseline (E4/E7/E9/F) stays first; everything after is the
# pre-refactor hardening pack. Any change to this list needs a written reason in
# DESIGN.md, per house rule.
select = [
  "E4", "E7", "E9", "F",          # frozen audited baseline (pycodestyle errors + pyflakes)
  "W", "I", "UP", "B", "A",       # hygiene: warnings, import order, py310+ idioms, bugbear, builtin shadowing
  "C4", "SIM", "RET", "RSE",      # simplification & return/raise discipline
  "ISC", "PIE",
  "C90",                          # mccabe ceiling (max-complexity below; ratchet DOWN only)
  "PLE", "PLW",
  "PLR0912", "PLR0915",           # branch/statement ceilings (same ratchet policy as C90)
  # ---- loudness pack: nothing fails silently (see DESIGN.md / audit §9) ----
  "T20",                          # no print() — invisible to logging AND Sentry
  "BLE",                          # no blind `except Exception` without re-raise
  "S110", "S112",                 # no try/except/pass, no try/except/continue
  "TRY",                          # tryceratops: typed raises, no error-swallowing shapes
  "LOG", "G",                     # logging correctness (G201: error(exc_info=True) -> .exception())
  "DTZ",                          # no naive datetimes
  # ---- drift & debt ----
  "ERA",                          # no commented-out code (pairs with vulture)
  "TC",                           # type-only imports into TYPE_CHECKING (serves the startup-cost policy)
  "TID",                          # flake8-tidy-imports — banned-api table added in Phase 2 (audit §4.3)
  "RUF",                          # ruff-native; RUF100 = unused-noqa (the noqa-rot guard)
  "ANN401",                       # no typing.Any in annotations — Phase 3 Any purge
]
ignore = [
  "TRY003",  # long-message-outside-exception-class: noise, no loudness value here
]

[tool.ruff.lint.mccabe]
# Phase-0 measured max (config_editor's menu monster). Ratchet DOWN only, never up.
max-complexity = 37

[tool.ruff.lint.pylint]
# Phase-0 measured maxima (same monster). Ratchet DOWN only, never up.
max-branches = 40
max-statements = 194

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# The declarative half of the "custom rules" (audit §4.3). One rule code (TID251)
# carries every ban, so per-file-ignores exempt a file from ALL bans at once —
# acceptable only for one-line seam modules (style.py here, env.py in Phase 5).
# Path-scoped policies (no sys.exit/sys.platform outside their homes) can't live
# here for that reason; they're in scripts/lint_rules.py (MD001/MD002) instead.
# Staged rollout: click.style lands now (the S->style rename already cleared it);
# typing.Any joins in Phase 3 (with ANN401, under the Any purge); os.environ /
# os.getenv join in Phase 5 (once multideck.env owns process-env access).
"click.style" = { msg = "Use multideck.style.style — the single styling seam [LS-A-003]." }
"typing.Any" = { msg = "Use object + isinstance narrowing — no typing.Any anywhere in src [Phase-3 audit §6.2]." }
"os.environ" = { msg = "Use multideck.env accessors — env.py is the single env-access seam [Phase-5 audit §8]." }
"os.getenv" = { msg = "Use multideck.env accessors — env.py is the single env-access seam [Phase-5 audit §8]." }

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]  # check.py & tooling print by design
"tests/**" = [
  "PLR0915",  # sprawling test funcs are readable enough; no ceiling for tests
  "S110",     # tests may assert-swallow in teardown/polling helpers
  "PLW1510",  # harness subprocess.run asserts on observable outcomes (stdout/files/.returncode), not an implicit check=
  "ANN401",   # tests are not strict-typed yet (tests-strict is staged); Any is acceptable in test helpers
  "TID251",   # tests import typing.Any freely; the ban targets src only
]
"src/multideck/style.py" = ["TID251"]  # the click.style ban's origin seam (1-line module; residual risk accepted)
"src/multideck/env.py" = ["TID251"]   # the os.environ ban's origin seam — env.py IS the env-access layer

[tool.ty.environment]
python-version = "3.13"

[tool.vulture]
paths = ["src", "scripts"]
min_confidence = 80
ignore_decorators = [
  "@main.command",
  "@main.group",
  "@*.command",
  "@click.*",
  "@pytest.fixture",
]
ignore_names = [
  "attach_port",  # cli/app.py: deprecated click option (hidden=True), still bound by click
  "hdc",          # platform/windows.py: ctypes EnumDisplayMonitors callback positional (required by MONITORENUMPROC)
  "lprect",       # platform/windows.py: ctypes EnumDisplayMonitors callback positional (required by MONITORENUMPROC)
  "lparam",       # platform/windows.py: ctypes EnumDisplayMonitors callback positional (required by MONITORENUMPROC)
]
